--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "docx": "^9.1.1",
     "embla-carousel-react": "^8.5.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.10",
